--- a/web_version/index.html
+++ b/web_version/index.html
@@ -24,9 +24,15 @@
 </head>
 
 <body>
-  <canvas class="webgl"></canvas>
+  <div class="container">
+    <div class="header">Header</div>
+    <div class="sideBar">this is side bar</div>
+    <div class="canvasContainer">
+    </div>
+  </div>
   <script type="module" src="index.js"></script>
-  <div>
+  <canvas class="webgl"></canvas>
+  <div class="cover">
     <h1>Hello!</h1>
     <h2>This is Fun Palette.</h2>
     <h3>Loading...</h3>
