--- a/web_version/index.html
+++ b/web_version/index.html
@@ -7,6 +7,8 @@
   <title>Fun Palette</title>
   <link rel="icon" href="palette.svg" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="pickr_classic.css" />
+  <!-- 'classic' theme -->
   <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
   <script type="importmap">
     {
@@ -21,17 +23,43 @@
       }
     }
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.es5.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-  <div class="container">
-    <div class="header">Header</div>
-    <div class="sideBar">this is side bar</div>
-    <div class="canvasContainer">
-    </div>
-  </div>
-  <script type="module" src="index.js"></script>
   <canvas class="webgl"></canvas>
+  <div class="container">
+    <div class="header">
+      <p style="font-size: 280%; color: #d44b3e;">FunPalette</p>
+      <p style="font-size: 110%; color: #d18c4c">Online Palette Editor</p>
+    </div>
+    <div class="sideBar">
+      <div class="sideBarHeader">EDIT COLOR</div>
+      <div class="button-area" style="height: 60px;">
+        <button class="add-color" id="add" onclick="add_color()">+</button>
+        <button class="add-color" id="sub" onclick="remove_color()">-</button>
+      </div>
+      <div class="colorlist"
+        style="display: flex; flex-direction: column; margin-top: 10px; justify-content: center; align-items: center;">
+      </div>
+    </div>
+    <div class="sideBar" id="right">
+      <div class="sideBarHeader" >OPTIONS</div>
+      <div style="display:flex; flex-direction:column; align-items: center; justify-content: center;">
+        <button class="add-color" id="reorder" onclick="reorder()">reorder</button>
+      </div>
+    </div>
+    <div class="footer"></div>
+  </div>
+  <script src="color_format.js"></script>
+  <script type="module" src="index.js"></script>
+  <script>
+  </script>
   <div class="cover">
     <h1>Hello!</h1>
     <h2>This is Fun Palette.</h2>
